<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Schedufy</string>
    <string name="hello_world">Hello COMP3717!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="events">Events</string>
    <string name="title_activity_schedufy_settings">Settings</string>
    <string name="settings_text">Settings</string>
    <string name="setting_back_to_home">Done</string>
    <string name="Events_Label">Week of …</string>
    <string name="addSign">Add new event</string>
    <string name="title_activity_add_event">AddEvent</string>
    <string name="edittext_category_string">Category…</string>
    <string name="edittext_date_string">Date…</string>
    <string name="edittext_time_string">Time…</string>
    <string name="edittext_description_string">Description…</string>
    <string name="add_event_string">Add Event</string>
    <string name="event_added">Event Added</string>
    <string name="category">category</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="description">description</string>
    <string name="string_back">Back</string>
    <string name="string_display_all_events">Display All Events</string>
    <string name="string_category">category</string>
    <string name="string_date">date</string>
    <string name="string_time">time</string>
    <string name="string_description">description</string>
    <string name="string_uid">uid</string>

</resources>
