<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.schedufy.user.schedufy.AddEvent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextCategory"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/edittext_category_string"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editTextDate"
        android:layout_below="@+id/editTextCategory"
        android:layout_alignParentStart="true"
        android:hint="@string/edittext_date_string"
        android:onClick="datePickerClick" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/editTextTime"
        android:layout_below="@+id/editTextDate"
        android:layout_alignParentStart="true"
        android:hint="@string/edittext_time_string"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editTextDescription"
        android:layout_below="@+id/editTextTime"
        android:layout_alignParentStart="true"
        android:hint="@string/edittext_description_string"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAddEvent"
        android:text="@string/add_event_string"
        android:layout_gravity="center_horizontal"
        android:onClick="addingEvent"
        android:layout_below="@+id/editTextDescription"
        android:layout_centerHorizontal="true" />

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="102dp" />
</RelativeLayout>
